# note-taking

./: .gitignore  README.md  pyproject.toml
note_taking/: cli.py  config.py  config.toml  file_operations.py  main.py  models.py  test.qmd  utils.py
tests/: test_file_operations.py  test_utils.py
tests/overall_test_data/: calendar.md
tests/overall_test_data/sub-folder/: project.company.main_idea.md
tests/replace_links_test/test_data/: link_test.md
